# TTL Keyboard CMakeLists.txt for USB2TTL Pico Demo

cmake_minimum_required(VERSION 3.13)

# è®¾ç½®é¡¹ç›®åç§°å’Œç‰ˆæœ?
set(PROJECT_NAME usb2ttl_pico)
set(PROJECT_VERSION 2.0.0)

# åŒ…å« Pico SDK
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)

# è®¾ç½® C++ æ ‡å‡†
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# å£°æ˜é¡¹ç›®
project(${PROJECT_NAME} C CXX ASM)

# ç¼–è¯‘é€‰é¡¹
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2 -Wno-unused-parameter -Wno-pedantic")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -O2 -Wno-unused-parameter")

# åˆå§‹åŒ?Pico SDK
pico_sdk_init()

# åŒ…å«å¤´æ–‡ä»¶ç›®å½?
include_directories(include)
include_directories(include/ili9488)

# æ”¶é›†æºæ–‡ä»?
file(GLOB_RECURSE SOURCES 
    "src/*.cpp"
    "src/*.c"
)

# åˆ›å»ºTTLé”®ç›˜æ¼”ç¤ºç¨‹åº
add_executable(usb2ttl_demo
    examples/usb2ttl_demo.cpp
    ${SOURCES}
)

# é“¾æ¥å¿…è¦çš„åº“
target_link_libraries(usb2ttl_demo
    pico_stdlib
    hardware_uart
    hardware_gpio
    hardware_spi
    hardware_pwm
    hardware_timer
    hardware_dma
)

# åŒ…å«é¡¹ç›®å¤´æ–‡ä»¶ç›®å½?
target_include_directories(usb2ttl_demo PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/include/ili9488
)

# å¯ç”¨ USB è¾“å‡ºç”¨äºè°ƒè¯•
pico_enable_stdio_usb(usb2ttl_demo 1)
pico_enable_stdio_uart(usb2ttl_demo 0)

# åˆ›å»º map/bin/hex/uf2 æ–‡ä»¶
pico_add_extra_outputs(usb2ttl_demo)

# æ·»åŠ ç¼–è¯‘å®šä¹‰
target_compile_definitions(usb2ttl_demo PRIVATE
    # TTLé”®ç›˜UARTé…ç½®
    PICO_DEFAULT_UART=1
    PICO_DEFAULT_UART_TX_PIN=8
    PICO_DEFAULT_UART_RX_PIN=9
    TTL_KEYBOARD_BAUD=115200
    # ILI9488ç›¸å…³å®šä¹‰
    ILI9488_SPI_SPEED=40000000
    ILI9488_WIDTH=320
    ILI9488_HEIGHT=480
)

# åˆ›å»ºUARTæµ‹è¯•ç¨‹åº
add_executable(test_uart
    examples/test_uart.cpp
)

# é“¾æ¥UARTæµ‹è¯•ç¨‹åºçš„åº“
target_link_libraries(test_uart
    pico_stdlib
    hardware_uart
    hardware_gpio
)

# å¯ç”¨ USB è¾“å‡ºç”¨äºè°ƒè¯•
pico_enable_stdio_usb(test_uart 1)
pico_enable_stdio_uart(test_uart 0)

# åˆ›å»º map/bin/hex/uf2 æ–‡ä»¶
pico_add_extra_outputs(test_uart)

# è®¾ç½®ç¼–è¯‘å®šä¹‰
target_compile_definitions(test_uart PRIVATE
    # ä½¿ç”¨UART1ä½œä¸ºTTLé”®ç›˜è¾“å…¥
    PICO_DEFAULT_UART=0
    PICO_DEFAULT_UART_TX_PIN=8
    PICO_DEFAULT_UART_RX_PIN=9
)

# æ·»åŠ è°ƒè¯•UARTç¨‹åº
add_executable(debug_uart
    examples/debug_uart.cpp
)

# é“¾æ¥å¿…è¦çš„åº“
target_link_libraries(debug_uart
    pico_stdlib
    hardware_uart
    hardware_gpio
)

# å¯ç”¨USBè¾“å‡ºç”¨äºè°ƒè¯•
pico_enable_stdio_usb(debug_uart 1)
pico_enable_stdio_uart(debug_uart 0)

# ç”ŸæˆUF2æ–‡ä»¶
pico_add_extra_outputs(debug_uart) 
